@@ -13,7 +13,7 @@ with qw(Hailo::Role::Generic
 my $APOSTROPHE    = qr/['’]/;
 my $DOTTED_WORD   = qr/\w+(?:\.\w+)?/;
 my $WORD          = qr/$DOTTED_WORD(?:$APOSTROPHE$DOTTED_WORD)*/;
-my $TOKEN         = qr/\S+|\s{3,}/s;
+my $TOKEN         = qr/\S+|(?<=\s)\s+(?=\s)/s;
 my $OPEN_QUOTE    = qr/['"‘“„«»「『‹‚]/;
 my $CLOSE_QUOTE   = qr/['"’«»“”」』›‘]/;
 my $TERMINATOR    = qr/(?:[?!‽]+|(?<!\.)\.)/;
