@@ -10,7 +10,7 @@ use File::Slurp qw(slurp);
 use List::Util qw(shuffle min);
 use File::Temp qw(tempfile tempdir);
 use File::CountLines qw(count_lines);
-use Hailo::Tokenizer::Words;
+use Hailo::Tokenizer::NonWhitespace;
 use namespace::clean -except => 'meta';
 
 sub simple_storages {
@@ -249,20 +249,20 @@ sub train_file {
     $hailo->train($f);
 }
 
-sub train_a_few_words {
+sub train_a_few_tokens {
     my ($self) = @_;
     my $hailo = $self->hailo;
 
     # Get some training material
     my $size = 10;
-    my @random_words = rand_chars( set => 'all', min => 10, max => 15 );
+    my @random_tokens = rand_chars( set => 'all', min => 10, max => 15 );
 
     # Learn from it
     eval {
-        $hailo->learn("@random_words");
+        $hailo->learn("@random_tokens");
     };
 
-    return ($@, \@random_words);
+    return ($@, \@random_tokens);
 }
 
 sub test_congress {
@@ -337,9 +337,9 @@ sub test_megahal {
 
 
     $self->train_filename("megahal.trn", $lns);
-    my @words = $self->some_words("megahal.trn", $lns * 0.1);
+    my @tokens = $self->some_tokens("megahal.trn", $lns * 0.1);
 
-    for (@words) {
+    for (@tokens) {
         my $reply = $hailo->reply($_);
         ok(defined $reply, "$storage: Got a reply to $_");
     }
@@ -380,9 +380,9 @@ sub test_babble {
     my $storage = $self->storage;
 
     for (1 .. 10) {
-        my ($err, $words) = $self->train_a_few_words();
+        my ($err, $tokens) = $self->train_a_few_tokens();
 
-        my $input = $words->[5];
+        my $input = $tokens->[5];
         my $reply = $hailo->reply($input);
         # Hailo replies
         cmp_ok(length($reply) * 2, '>', length($input), "$storage: Hailo knows how to babble, said '$reply' given '$input'");
@@ -462,20 +462,20 @@ sub test_all {
     return;
 }
 
-sub some_words {
+sub some_tokens {
     my ($self, $file, $lines) = @_;
     $lines //= 50;
     my $trn = slurp($self->test_file($file));
 
     my @trn = split /\n/, $trn;
     my @small_trn = @trn[0 .. min(scalar(@trn), $lines)];
-    my $words = Hailo::Tokenizer::Words->new;
-    my @trn_words = map { $words->make_tokens($_) } @small_trn;
-    my @words = shuffle($words->find_key_tokens(\@trn_words));
+    my $toke = Hailo::Tokenizer::NonWhitespace->new;
+    my @trn_tokens = map { $toke->make_tokens($_) } @small_trn;
+    my @tokens = shuffle($toke->find_key_tokens(\@trn_tokens));
 
-    @words = @words[0 .. $lines];
+    @tokens = @tokens[0 .. $lines];
 
-    return @words;
+    return @tokens;
 }
 
 sub test_fh {
